--- a/sass/partials/content/_chats-list.scss
+++ b/sass/partials/content/_chats-list.scss
@@ -10,7 +10,7 @@
 	&__item{
 		position: relative;
 		display: flex;
-		padding: 6px 15px 6px 15px;
+		padding: 6px 10px 6px 20px;
 		height: 70px;
 
 		&:hover{
